<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".notification.CovidTrackerNotificationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp">

        <TextView
            android:id="@+id/introductionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@string/bold"
            android:text="@string/introduction_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewReminder"
            android:layout_width="210dp"
            android:layout_height="46dp"
            android:layout_marginStart="169dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/rectangle_statistic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introductionText"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="11dp"
            android:fontFamily="@string/bold"
            android:text="Set a reminder"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            app:layout_constraintStart_toStartOf="@id/viewReminder"
            app:layout_constraintTop_toTopOf="@id/viewReminder"></TextView>

        <View
            android:layout_width="139dp"
            android:layout_height="209dp"
            android:layout_marginTop="102dp"
            android:background="@drawable/man_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titleNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="196dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle_notification"
            android:hint="@string/title_notification"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewReminder" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="196dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rectangle_notification"
            android:hint="Message"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleNotification" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-20dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageNotification" />

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-50dp"
            android:numbersTextColor="@color/black"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:timePickerMode="spinner"
            app:layout_constraintStart_toEndOf="@id/datePicker"
            app:layout_constraintTop_toBottomOf="@id/messageNotification" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:text="Schedule notification"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/datePicker" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>